fix event header line wrap

--- a/client/src/styles/_event-container.scss
+++ b/client/src/styles/_event-container.scss
@@ -31,6 +31,7 @@
       h3 {
         font-weight: bold;
         color: $drkGray;
+        white-space: nowrap;
       }
     }
     p {
